--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#00753A" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="McNeer Outdoors is a professional lawn care company that specializes in Landscaping. Services we offer include Pool installation and Repair, Landscaping, Landscape Lighting, Mosquito & Bug Control, Sprinklers, Concrete & Stone, Gutters, and more!>"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta name="robots" content="index,follow">
+    <meta name="googlebot" content="index,follow">
+    <meta name="subject" content="Professional Landscaping & Lawn Care Services">
+
+    <meta name="geo.region" content="US-MS">
+    <meta name="geo.placename" content="Cleveland">
+    <link rel="apple-touch-icon" href="favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,11 +30,22 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title> McNeer Outdoors Professional Landscaping Services </title>
+    <title> McNeer Outdoors Professional Lawn Care </title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"/>
+
+    <meta name="google-site-verification" content="Kqxu1xeeRwHoENsFFn_7O4NnSdNGoezKuqcc8CLOA-k" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154893681-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154893681-1');
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
