added yandex webmaster meta tag

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"/>
 
     <meta name="google-site-verification" content="Kqxu1xeeRwHoENsFFn_7O4NnSdNGoezKuqcc8CLOA-k" />
+    <meta name="yandex-verification" content="2eb36db4f7e27186" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154893681-1"></script>
 <script>
