added norton safeweb meta tag

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,6 +30,7 @@
 
     <meta name="google-site-verification" content="Kqxu1xeeRwHoENsFFn_7O4NnSdNGoezKuqcc8CLOA-k" />
     <meta name="yandex-verification" content="2eb36db4f7e27186" />
+    <meta name="norton-safeweb-site-verification" content="xn4j58w576v0owng5wom5lsp4fcnjbsbjq4vdlxcnu0503fohrmr428wmjabee9q0qu-85f7nez83lplhv3unbm9-33m9bl6136ba5kwvcgpqfla54j9x43v30utmugy" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154893681-1"></script>
 <script>
